--- a/package.json
+++ b/package.json
@@ -27,6 +27,11 @@
     "react-hook-form": "^7.41.5",
     "react-icons": "^4.7.1",
     "typescript": "4.9.4",
+    "uuid": "^9.0.0",
     "yup": "^0.32.11"
+  },
+  "devDependencies": {
+    "@types/uuid": "^9.0.0",
+    "firebase-tools": "^11.21.0"
   }
 }
